--- a/app/src/main/res/layout/activity_admins.xml
+++ b/app/src/main/res/layout/activity_admins.xml
@@ -13,15 +13,15 @@
         android:layout_margin="6dp"
         tools:context=".Admins">
 
-    <ListView
-        android:id="@+id/list_admin"
-        android:layout_width="wrap_content"
-        android:layout_height="223dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="2dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        <ListView
+            android:id="@+id/list_admin"
+            android:layout_width="396dp"
+            android:layout_height="517dp"
+            android:layout_margin="2dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
@@ -49,22 +49,7 @@
         app:layout_constraintStart_toStartOf="@+id/list_admin"
         app:layout_constraintTop_toBottomOf="@+id/list_admin" />
 
-        <Button
-            android:id="@+id/btn_insertnewraffle_admin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:layout_marginBottom="60dp"
-            android:backgroundTintMode="screen"
-            android:drawableLeft="@drawable/ic_baseline_add_circle_outline_24"
-            android:text=" Inserir novo sorteio"
-            android:textColor="@color/colorOne"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_profit" />
-
-    <TextView
+        <TextView
         android:id="@+id/txt_profit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
