--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,8 @@
         android:drawableLeft="@drawable/ic_baseline_content_copy_24"
         android:text=" Copiar números disponiveis"
         android:textColor="@color/colorOne"
-        app:layout_constraintEnd_toEndOf="@+id/edit_name_main"
-        app:layout_constraintStart_toStartOf="@+id/edit_name_main"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/edit_name_main" />
 
     <Button
@@ -66,14 +66,13 @@
         android:id="@+id/edit_name_main"
         android:layout_width="150dp"
         android:layout_height="0dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:backgroundTint="@color/colorThree"
         android:ems="10"
         android:hint="Nome"
         android:inputType="textPersonName"
         android:textColorHint="@color/colorTexGray"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/btn_copy_main"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
@@ -89,5 +88,16 @@
         app:layout_constraintStart_toStartOf="@+id/btn_copy_main"
         app:layout_constraintTop_toBottomOf="@+id/btn_copy_main" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/button_deletename"
+        android:layout_width="44dp"
+        android:layout_height="46dp"
+        android:background="@color/colorTrans"
+        app:layout_constraintBottom_toTopOf="@+id/btn_copy_main"
+        app:layout_constraintEnd_toEndOf="@+id/btn_copy_main"
+        app:layout_constraintStart_toEndOf="@+id/edit_name_main"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:srcCompat="@android:drawable/ic_delete" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
