--- a/app/src/main/res/layout/activity_admins.xml
+++ b/app/src/main/res/layout/activity_admins.xml
@@ -15,13 +15,15 @@
 
         <ListView
             android:id="@+id/list_admin"
-            android:layout_width="396dp"
+            android:layout_width="match_parent"
             android:layout_height="517dp"
             android:layout_margin="2dp"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" >
+
+        </ListView>
 
     <TextView
         android:id="@+id/textView"
@@ -36,29 +38,43 @@
         app:layout_constraintStart_toStartOf="@+id/list_admin"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txt_solds_admin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text=""
-        android:textColor="@color/colorTextBlack"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/list_admin"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/list_admin"
-        app:layout_constraintTop_toBottomOf="@+id/list_admin" />
+        <TextView
+            android:id="@+id/txt_solds_admin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text=""
+            android:textColor="@color/colorTextBlack"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/list_admin"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/list_admin"
+            app:layout_constraintTop_toBottomOf="@+id/list_admin" />
 
         <TextView
-        android:id="@+id/txt_profit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="376dp"
-        android:textColor="@color/colorTextBlack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_solds_admin" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:id="@+id/txt_profit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:textColor="@color/colorTextBlack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/txt_solds_admin"
+            app:layout_constraintTop_toBottomOf="@+id/txt_solds_admin" />
+
+        <Button
+            android:id="@+id/btn_insertnewraffle_admin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="100dp"
+            android:backgroundTintMode="screen"
+            android:drawableLeft="@drawable/ic_baseline_add_circle_outline_24"
+            android:text="Inserir novo sorteio"
+            android:textColor="@color/colorOne"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_profit" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
