--- a/app/src/main/res/layout/dialog_new_raffle.xml
+++ b/app/src/main/res/layout/dialog_new_raffle.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="101dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:text=""
         android:textAlignment="center"
         android:backgroundTint="@color/colorTexGray"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:text=""
         android:textAlignment="center"
         android:backgroundTint="@color/colorTexGray"
