--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,8 @@
         android:drawableLeft="@drawable/ic_baseline_content_copy_24"
         android:text=" Copiar números disponiveis"
         android:textColor="@color/colorOne"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="@+id/txt_opcional"
+        app:layout_constraintStart_toStartOf="@+id/txt_opcional"
         app:layout_constraintTop_toBottomOf="@+id/edit_name_main" />
 
     <Button
@@ -42,18 +42,16 @@
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="60dp"
         android:backgroundTintMode="screen"
         android:drawableLeft="@drawable/ic_baseline_sell_24"
         android:text=" Números Vendidos"
         android:textColor="@color/colorOne"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_soldNumbers"
         app:layout_constraintStart_toStartOf="@+id/btn_soldNumbers"
         app:layout_constraintTop_toBottomOf="@+id/btn_soldNumbers" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txt_opcional"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -74,7 +72,7 @@
         android:textColorHint="@color/colorTexGray"
         app:layout_constraintEnd_toStartOf="@+id/button_deletename"
         app:layout_constraintStart_toStartOf="@+id/btn_copy_main"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_opcional" />
 
     <Button
         android:id="@+id/btn_soldNumbers"
@@ -96,8 +94,23 @@
         android:background="@color/colorTrans"
         app:layout_constraintBottom_toTopOf="@+id/btn_copy_main"
         app:layout_constraintEnd_toEndOf="@+id/btn_copy_main"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/txt_opcional"
         app:srcCompat="@android:drawable/ic_delete" />
+
+    <Button
+        android:id="@+id/btn_reserved"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="90dp"
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:text="Reservado"
+        android:textColor="@color/colorOne"
+        android:backgroundTintMode="screen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_access_main" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
